salesforce/force-app/main/default/objects/Contact/fields/First_Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Seen_Date__c</fullName>
    <description>First day this user was active in the GA4 data.</description>
    <inlineHelpText>First day this user was active in the GA4 data.</inlineHelpText>
    <label>First Seen Date</label>
    <type>Date</type>
</CustomField>