salesforce/force-app/main/default/objects/Contact/fields/Frequency_Score__c.field-meta.xml
<CustomField>
    <fullName>Frequency_Score__c</fullName>
    <description>1-5, 5 = most orders (among purchasers).</description>
    <inlineHelpText>1-5, 5 = most orders (among purchasers).</inlineHelpText>
    <label>Frequency Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>