salesforce/force-app/main/default/objects/Contact/fields/GA4_Sessions__c.field-meta.xml
<CustomField>
    <fullName>GA4_Sessions__c</fullName>
    <description>Number of GA4 sessions.</description>
    <inlineHelpText>Number of GA4 sessions.</inlineHelpText>
    <label>GA4 Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>