salesforce/force-app/main/default/objects/Contact/fields/GA4_Transactions__c.field-meta.xml
<CustomField>
    <fullName>GA4_Transactions__c</fullName>
    <description>Number of orders.</description>
    <inlineHelpText>Number of orders.</inlineHelpText>
    <label>GA4 Transactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>