salesforce/force-app/main/default/objects/Contact/fields/Is_Churned__c.field-meta.xml
<CustomField>
    <fullName>Is_Churned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No GA4 activity in the last CHURN_DAYS days of the data.</description>
    <inlineHelpText>No GA4 activity in the last CHURN_DAYS days of the data.</inlineHelpText>
    <label>Is Churned</label>
    <type>Checkbox</type>
</CustomField>