salesforce/force-app/main/default/objects/Contact/fields/Is_Lapsed_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Is_Lapsed_Purchaser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has bought, but not in the last CHURN_DAYS days of the data.</description>
    <inlineHelpText>Has bought, but not in the last CHURN_DAYS days of the data.</inlineHelpText>
    <label>Is Lapsed Purchaser</label>
    <type>Checkbox</type>
</CustomField>