salesforce/force-app/main/default/objects/Contact/fields/Last_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date__c</fullName>
    <description>Date of this customer's most recent order.</description>
    <inlineHelpText>Date of this customer's most recent order.</inlineHelpText>
    <label>Last Purchase Date</label>
    <type>Date</type>
</CustomField>