salesforce/force-app/main/default/objects/Contact/fields/Last_Seen_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Seen_Date__c</fullName>
    <description>Last day this user was active in the GA4 data.</description>
    <inlineHelpText>Last day this user was active in the GA4 data.</inlineHelpText>
    <label>Last Seen Date</label>
    <type>Date</type>
</CustomField>