salesforce/force-app/main/default/objects/Contact/fields/Lifetime_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Revenue__c</fullName>
    <description>Total revenue (USD) from this customer in the GA4 data.</description>
    <inlineHelpText>Total revenue (USD) from this customer in the GA4 data.</inlineHelpText>
    <label>Lifetime Revenue</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>