salesforce/force-app/main/default/objects/Contact/fields/Monetary_Score__c.field-meta.xml
<CustomField>
    <fullName>Monetary_Score__c</fullName>
    <description>1-5, 5 = highest revenue (among purchasers).</description>
    <inlineHelpText>1-5, 5 = highest revenue (among purchasers).</inlineHelpText>
    <label>Monetary Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>