salesforce/force-app/main/default/objects/Contact/fields/Next_Best_Category__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Category__c</fullName>
    <description>Product category this customer is most likely to buy next (cross-sell).</description>
    <inlineHelpText>Product category this customer is most likely to buy next (cross-sell).</inlineHelpText>
    <label>Next Best Category</label>
    <length>100</length>
    <type>Text</type>
</CustomField>