salesforce/force-app/main/default/objects/Contact/fields/Next_Best_Category_Probability__c.field-meta.xml
<CustomField>
    <fullName>Next_Best_Category_Probability__c</fullName>
    <description>How often customers with the same last purchase went on to buy the next best category.</description>
    <inlineHelpText>How often customers with the same last purchase went on to buy the next best category.</inlineHelpText>
    <label>Next Best Category Probability</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>