salesforce/force-app/main/default/objects/Contact/fields/Recency_Score__c.field-meta.xml
<CustomField>
    <fullName>Recency_Score__c</fullName>
    <description>1-5, 5 = bought most recently (among purchasers).</description>
    <inlineHelpText>1-5, 5 = bought most recently (among purchasers).</inlineHelpText>
    <label>Recency Score</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>