salesforce/force-app/main/default/objects/Contact/fields/Revenue_Trend__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Trend__c</fullName>
    <description>Latest week-over-week revenue label: Expansion, Contraction, Flat, Baseline or Insufficient history.</description>
    <inlineHelpText>Latest week-over-week revenue label: Expansion, Contraction, Flat, Baseline or Insufficient history.</inlineHelpText>
    <label>Revenue Trend</label>
    <length>40</length>
    <type>Text</type>
</CustomField>