salesforce/force-app/main/default/objects/Contact/fields/RFM_Segment__c.field-meta.xml
<CustomField>
    <fullName>RFM_Segment__c</fullName>
    <description>Champion, Recent customer, At-risk high value or Lapsing customer.</description>
    <inlineHelpText>Champion, Recent customer, At-risk high value or Lapsing customer.</inlineHelpText>
    <label>RFM Segment</label>
    <length>40</length>
    <type>Text</type>
</CustomField>